@@ -40,7 +40,7 @@ public class ServerTest extends PerfTestCase {
   // ES + TOMCAT
   @Test
   public void server_startup_and_shutdown() throws Exception {
-    String defaultWebJavaOptions = "-Xmx768m -XX:MaxPermSize=160m -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djruby.management.enabled=false";
+    String defaultWebJavaOptions = "-Xmx768m -XX:+HeapDumpOnOutOfMemoryError -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djruby.management.enabled=false";
     Orchestrator orchestrator = Orchestrator.builderEnv()
       .setOrchestratorProperty("javaVersion", "LATEST_RELEASE")
       .addPlugin("java")
